objects/Tour_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>This field is used for reporting purpose on community view</description>
        <formula>Primary_Member__r.AccountId</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person assigned to give tour</inlineHelpText>
        <label>Assigned Host</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (Assigned Host)</relationshipLabel>
        <relationshipName>Tours2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_By_Sales_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booked By Sales Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booked_By_User_Role__c</fullName>
        <formula>booked_by_contact_id__r.Custom_CRM_User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked By User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Email__c</fullName>
        <label>Building Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Building_No_City__c</fullName>
        <formula>Location__r.Location_No_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building No City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buildings_Country__c</fullName>
        <description>Captures the Country name of the building for which the tour is booked</description>
        <inlineHelpText>Captures the Country name of the building for which the tour is booked</inlineHelpText>
        <label>Buildings Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Email__c</fullName>
        <description>maintain the email of related Building CM</description>
        <inlineHelpText>maintain the email of related Building CM</inlineHelpText>
        <label>CM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cancelation_age_formula__c</fullName>
        <formula>today() - Tour_Canceled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelation age formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Busy, scheduling conflict</fullName>
                </value>
                <value>
                    <fullName>Lost interest</fullName>
                </value>
                <value>
                    <fullName>Competitor solution</fullName>
                </value>
                <value>
                    <fullName>Visited different WeWork location</fullName>
                </value>
                <value>
                    <fullName>No reason (didn't provide)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Location__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <formula>Location__r.Cluster_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Email__c</fullName>
        <formula>Location__r.Cluster_Sales_Lead_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Name__c</fullName>
        <formula>Location__r.Cluster_Sales_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Email__c</fullName>
        <formula>Location__r.Cluster_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Name__c</fullName>
        <formula>Location__r.Cluster_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Lead_Name__c</fullName>
        <formula>Location__r.Community_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager_Name__c</fullName>
        <formula>Location__r.Community_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Count__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, "Completed"), 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Budget__c</fullName>
        <description>What are they paying today?</description>
        <inlineHelpText>What are they paying today?</inlineHelpText>
        <label>Current Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Rescheduled__c</fullName>
        <description>Date on which the Tour was resceduled</description>
        <label>Date Rescheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (Contact)</relationshipLabel>
        <relationshipName>decision_maker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desired_Budget__c</fullName>
        <description>What do they plan on paying?</description>
        <inlineHelpText>What do they plan on paying?</inlineHelpText>
        <label>Desired Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_Currently_Have_Healthcare__c</fullName>
        <label>Does Currently Have Healthcare?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:00AM</fullName>
                </value>
                <value>
                    <fullName>8:30AM</fullName>
                </value>
                <value>
                    <fullName>9:00AM</fullName>
                </value>
                <value>
                    <fullName>9:30AM</fullName>
                </value>
                <value>
                    <fullName>10:00AM</fullName>
                </value>
                <value>
                    <fullName>10:30AM</fullName>
                </value>
                <value>
                    <fullName>11:00AM</fullName>
                </value>
                <value>
                    <fullName>11:30AM</fullName>
                </value>
                <value>
                    <fullName>12:00PM</fullName>
                </value>
                <value>
                    <fullName>12:30PM</fullName>
                </value>
                <value>
                    <fullName>1:00PM</fullName>
                </value>
                <value>
                    <fullName>1:30PM</fullName>
                </value>
                <value>
                    <fullName>2:00PM</fullName>
                </value>
                <value>
                    <fullName>2:30PM</fullName>
                </value>
                <value>
                    <fullName>3:00PM</fullName>
                </value>
                <value>
                    <fullName>3:30PM</fullName>
                </value>
                <value>
                    <fullName>4:00PM</fullName>
                </value>
                <value>
                    <fullName>4:30PM</fullName>
                </value>
                <value>
                    <fullName>5:00PM</fullName>
                </value>
                <value>
                    <fullName>5:30PM</fullName>
                </value>
                <value>
                    <fullName>6:00PM</fullName>
                </value>
                <value>
                    <fullName>6:30PM</fullName>
                </value>
                <value>
                    <fullName>7:00PM</fullName>
                </value>
                <value>
                    <fullName>7:30PM</fullName>
                </value>
                <value>
                    <fullName>8:00PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>New Tour Wizard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hosted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hosted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (Hosted By)</relationshipLabel>
        <relationshipName>Tours1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>WeWork Member Referral</fullName>
                </value>
                <value>
                    <fullName>In the news</fullName>
                </value>
                <value>
                    <fullName>Google search</fullName>
                </value>
                <value>
                    <fullName>Desk listing site</fullName>
                </value>
                <value>
                    <fullName>Sign on the Building / Walk By</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Partnership Referral</fullName>
                </value>
                <value>
                    <fullName>Outbound Email/Cold Call</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Creator Awards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_you_plan_to_work_at_WeWork__c</fullName>
        <label>How long you plan to work at WeWork</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>More than 6 months / forever!</fullName>
                </value>
                <value>
                    <fullName>Prefer not to say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_Buildings__c</fullName>
        <inlineHelpText>Interested buildings as per SpaceStation</inlineHelpText>
        <label>Interested Buildings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>32 Village</fullName>
                </value>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Strawinskylaan</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>ARC-Andres Arguibel 2860</fullName>
                </value>
                <value>
                    <fullName>ARC-Avenida Corrientes 800</fullName>
                </value>
                <value>
                    <fullName>ARC-Libertador 1000</fullName>
                </value>
                <value>
                    <fullName>ARC-Torre Bellini</fullName>
                </value>
                <value>
                    <fullName>ARN-Urban Escape</fullName>
                </value>
                <value>
                    <fullName>ATL-1372 Peachtree</fullName>
                </value>
                <value>
                    <fullName>ATL-3280 Peachtree Road NE</fullName>
                </value>
                <value>
                    <fullName>ATL-Colony Square</fullName>
                </value>
                <value>
                    <fullName>ATL-Tower Place</fullName>
                </value>
                <value>
                    <fullName>AUS-Congress</fullName>
                </value>
                <value>
                    <fullName>AUS-Domain</fullName>
                </value>
                <value>
                    <fullName>AUS-University Park</fullName>
                </value>
                <value>
                    <fullName>AUS-West 6th</fullName>
                </value>
                <value>
                    <fullName>AUS-Westview</fullName>
                </value>
                <value>
                    <fullName>AUS-WeWork 801 Barton Springs</fullName>
                </value>
                <value>
                    <fullName>BCN-Diagonal 444</fullName>
                </value>
                <value>
                    <fullName>BHZ-Boulevard Shopping</fullName>
                </value>
                <value>
                    <fullName>BKK-Asia Centre</fullName>
                </value>
                <value>
                    <fullName>BKK-T-One Building</fullName>
                </value>
                <value>
                    <fullName>BKN-109 S 5th St</fullName>
                </value>
                <value>
                    <fullName>BKN-Brooklyn Navy Yard</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Prospect)</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Sands)</fullName>
                </value>
                <value>
                    <fullName>BKN-Montague St.</fullName>
                </value>
                <value>
                    <fullName>BKN-Williamsburg</fullName>
                </value>
                <value>
                    <fullName>BL-Alexanderstraße</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desk(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_in_healthcare__c</fullName>
        <label>Interested in healthcare services?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, connect me to Trinet</fullName>
                </value>
                <value>
                    <fullName>No, not interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_payment_processing__c</fullName>
        <label>Interested in payment processing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journey</label>
        <referenceTo>Journey__c</referenceTo>
        <relationshipLabel>Tours</relationshipLabel>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source2__c</fullName>
        <formula>IF( ISBLANK( Lead__c ),  text(Opportunity__r.LeadSource), text(Lead__r.LeadSource)  )</formula>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <formula>IF( ISBLANK( Lead__c ),  Opportunity__r.Lead_Source_Detail__c , Lead__r.Lead_Source_Detail__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Source of the Tour, how it was booked.</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>42 Floors</fullName>
                </value>
                <value>
                    <fullName>ads-twitter</fullName>
                </value>
                <value>
                    <fullName>Adwords</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Broker Referral</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Cold Email</fullName>
                </value>
                <value>
                    <fullName>Craigslist Ad</fullName>
                </value>
                <value>
                    <fullName>Creator Awards</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Paid</fullName>
                </value>
                <value>
                    <fullName>Member Referral</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Olark Chat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Referral</fullName>
                </value>
                <value>
                    <fullName>Outbound Email/Cold Call</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Real Estate Website</fullName>
                </value>
                <value>
                    <fullName>Referral Tool</fullName>
                </value>
                <value>
                    <fullName>servicefriendz</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Walk In</fullName>
                </value>
                <value>
                    <fullName>WeLive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tours</relationshipLabel>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learn_about_payment_processor__c</fullName>
        <label>Learn about payment processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, connect me to Chase</fullName>
                </value>
                <value>
                    <fullName>No, not interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Expiration__c</fullName>
        <description>If at lead stage or tour outcome point, we gather direct information about the lease (rent) term of the potential member, this field is filled manually</description>
        <inlineHelpText>The date on which Contract is going to end.</inlineHelpText>
        <label>Lease Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <description>Locale of the Lead</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>af</fullName>
                </value>
                <value>
                    <fullName>af-ZA</fullName>
                </value>
                <value>
                    <fullName>sq</fullName>
                </value>
                <value>
                    <fullName>sq-AL</fullName>
                </value>
                <value>
                    <fullName>gsw-FR</fullName>
                </value>
                <value>
                    <fullName>am-ET</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ar-DZ</fullName>
                </value>
                <value>
                    <fullName>ar-BH</fullName>
                </value>
                <value>
                    <fullName>ar-EG</fullName>
                </value>
                <value>
                    <fullName>ar-IQ</fullName>
                </value>
                <value>
                    <fullName>ar-JO</fullName>
                </value>
                <value>
                    <fullName>ar-KW</fullName>
                </value>
                <value>
                    <fullName>ar-LB</fullName>
                </value>
                <value>
                    <fullName>ar-LY</fullName>
                </value>
                <value>
                    <fullName>ar-MA</fullName>
                </value>
                <value>
                    <fullName>ar-OM</fullName>
                </value>
                <value>
                    <fullName>ar-QA</fullName>
                </value>
                <value>
                    <fullName>ar-SA</fullName>
                </value>
                <value>
                    <fullName>ar-SY</fullName>
                </value>
                <value>
                    <fullName>ar-TN</fullName>
                </value>
                <value>
                    <fullName>ar-AE</fullName>
                </value>
                <value>
                    <fullName>ar-YE</fullName>
                </value>
                <value>
                    <fullName>hy</fullName>
                </value>
                <value>
                    <fullName>hy-AM</fullName>
                </value>
                <value>
                    <fullName>as-IN</fullName>
                </value>
                <value>
                    <fullName>az</fullName>
                </value>
                <value>
                    <fullName>az-Cyrl-AZ</fullName>
                </value>
                <value>
                    <fullName>az-Latn-AZ</fullName>
                </value>
                <value>
                    <fullName>ba-RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>Location__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Email__c</fullName>
        <label>Location Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location_Phone_Number__c</fullName>
        <formula>IF (TEXT(Location__r.Country__c) = "UK",
  "02036954926",
IF (TEXT(Location__r.Country__c) = "USA",
  "855.593.9675",
  "855.593.9675"
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Special_Instructions__c</fullName>
        <formula>Location__r.Special_Instructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Special Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_UUID__c</fullName>
        <formula>Location__r.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipName>Tour_Outcome</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Tour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Qualification__c</fullName>
        <label>Member Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good Fit</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>OK Fit</fullName>
                </value>
                <value>
                    <fullName>Not Good Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Move_In_Time_Frame__c</fullName>
        <description>This field will use to store if tour book from building page of the site.</description>
        <inlineHelpText>This field will use to store if tour book from building page of the site.</inlineHelpText>
        <label>Move In Time Frame</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NextMonth</fullName>
                </value>
                <value>
                    <fullName>Flexible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Decision_Maker__c</fullName>
        <label>Email of Decision Maker</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_of_space__c</fullName>
        <label>Name of space</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Tour_Notes__c</fullName>
        <label>New Tour Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to indicate that no follow-up is needed for this tour.</inlineHelpText>
        <label>No Follow-Up</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>